[package]
name = "sistema_biblioteca"
version = "0.1.0"
edition = "2018"

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }



[[bin]]
name = "sistema_biblioteca"
path = "main.rs"
